--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="css/spinner.css" />
 
     <script src="js/main.js" defer></script>
-    <title>OpenAI Image Genrator</title>
+    <title>Devime Image Genrator</title>
   </head>
   <body>
     <header>
       <div class="navbar">
         <div class="logo">
-          <h2>OpenAI Image Genrator</h2>
+          <h2>Devime Image Genrator</h2>
         </div>
         <div class="nav-links">
           <ul>
             <li>
               <a href="https://beta.openai.com/docs" target="_blank"
-                >OpenAI API Docs</a
-              >
+                >Devime API Docs</a
+>
             </li>
           </ul>
         </div>
